update whole konnektor PUT
